# py-poetry-project-template

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
scripts/: convco_for_reverts.sh
