[tool.poetry]
name = "my-py-project"
version = "0.1.0"
description = "<Short description of your py-project>"
authors = ["Luzian Hahn <luzian@hahn-coburg.de>"]
readme = "README.md"
packages = [{include = "my_py_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
